--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
     <title>Sentiment Based Product Recommendation</title>
   </head>
 
-  <body>
-    <nav class="navbar fixed-top navbar-dark bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+  <body style="background: rgb(63,94,251); background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);">
+    <nav class="navbar fixed-top navbar-dark">
+      <div class="container-fluid justify-content-center">
+        <a class="navbar-brand text-light" href="#"
           >Sentiment Product Recommendation System</a
         >
-        <button
+        <!--button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
@@ -30,11 +30,11 @@
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button-->
       </div>
     </nav>
 
-    <div class="container" style="margin-top: 70px">
+    <div class="container" style="margin-top: 70px;border-radius:15px;padding:45px;">
       <form action="/predict" method="post">
         <div class="row vstack gap-3">
           <div class="row">
