--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
     <title>Sentiment Based Product Recommendation</title>
   </head>
 
-  <body style="background: rgb(63,94,251); background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);">
-    <nav class="navbar fixed-top navbar-dark">
-      <div class="container-fluid justify-content-center">
-        <a class="navbar-brand text-light" href="#"
+  <body>
+    <nav class="navbar fixed-top navbar-dark bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
           >Sentiment Product Recommendation System</a
         >
-        <!--button
+        <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
@@ -30,11 +30,11 @@
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
-        </button-->
+        </button>
       </div>
     </nav>
 
-    <div class="container" style="margin-top: 70px;border-radius:15px;padding:45px;background-color:#fff;">
+    <div class="container" style="margin-top: 70px">
       <form action="/predict" method="post">
         <div class="row vstack gap-3">
           <div class="row">
@@ -128,7 +128,7 @@
   <footer class="bg-light text-center text-lg-start fixed-bottom">
     <!-- Copyright -->
     <div class="text-center p-3 bg-light">
-      Created by Ganesh More, 2022
+      Created by LingaBalaji J, 2022
     </div>
     <!-- Copyright -->
   </footer>
