update index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         <a class="navbar-brand" href="#"
           >Sentiment Product Recommendation System</a
         >
-        <button
+        <!--button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
@@ -30,7 +30,7 @@
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button-->
       </div>
     </nav>
 
@@ -128,7 +128,7 @@
   <footer class="bg-light text-center text-lg-start fixed-bottom">
     <!-- Copyright -->
     <div class="text-center p-3 bg-light">
-      Created by LingaBalaji J, 2022
+      Created by Ganesh More, 2022
     </div>
     <!-- Copyright -->
   </footer>
