update index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
 
   <body style="background: rgb(63,94,251); background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);">
     <nav class="navbar fixed-top navbar-dark bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+      <div class="container-fluid justify-content-center">
+        <a class="navbar-brand text-light" href="#"
           >Sentiment Product Recommendation System</a
         >
         <!--button
