update index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
       </div>
     </nav>
 
-    <div class="container" style="margin-top: 70px;border-radius: 15px;padding: 45px;background-color: #fff;">
+    <div class="container" style="margin-top: 70px;background-color: #fff;">
       <form action="/predict" method="post">
         <div class="row vstack gap-3">
           <div class="row">
