--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
   </head>
 
   <body style="background: rgb(63,94,251); background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);">
-    <nav class="navbar fixed-top navbar-dark bg-primary">
+    <nav class="navbar fixed-top navbar-dark">
       <div class="container-fluid justify-content-center">
-        <a class="navbar-brand text-light" href="#"
+        <a class="navbar-brand text-light" style ="font-size: x-large; font-weight: bolder" href="#"
           >Sentiment Product Recommendation System</a
         >
         <!--button
@@ -34,7 +34,7 @@
       </div>
     </nav>
 
-    <div class="container" style="margin-top: 70px;background-color: #fff;padding: 45px">
+    <div class="container" style="margin-top: 70px;background-color: #fff;padding: 45px;border-radius: 15px">
       <form action="/predict" method="post">
         <div class="row vstack gap-3">
           <div class="row">
